Logo and UX screen has to be divided into different modules

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,6 @@
+body {
+  background: #e3e3e3;
+}
 @import "~bootstrap/dist/css/bootstrap.min.css";
 
 * {
@@ -18,4 +21,314 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+}
+/* 16. OurClients */
+.OurClients {
+  margin-bottom: 150px;
+}
+.OurClients_Title {
+  color: #333333;
+  font-size: 62px;
+  font-weight: 700;
+  line-height: 55.8px;
+  text-align: center;
+  margin-bottom: 120px;
+}
+.OurClients_Card_Container {
+  margin-top: -220px;
+}
+.OurClients_Card_One {
+  background-color: #ffffff;
+  border-radius: 25.6px;
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+  margin-bottom: -20px;
+}
+.OurClients_Card_One_Title {
+  font-size: 38.4px;
+  font-weight: 600;
+  line-height: 46.08px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.OurClients_Card_One_Content {
+  font-size: 25.6px;
+  font-weight: 300;
+  line-height: 30.72px;
+  padding-inline: 40px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.OurClients_Card_One_Button_Container {
+  display: flex;
+  justify-content: center;
+}
+.OurClients_Card_One_Button {
+  border: 4px solid #ffc602;
+  border-radius: 256px;
+  background-color: #ffc602;
+  color: black;
+  font-size: 25.6px;
+  font-weight: 700;
+  line-height: 30.72px;
+  text-align: center;
+  transition-duration: 0.15s;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 7.68px 25.6px;
+}
+.OurClients_Card_One_Button:hover {
+  background-color: transparent;
+  color: #ffc602;
+}
+.OurClients_Card_Two {
+  display: flex;
+  align-items: center;
+  background-color: #e3e3e3;
+  border-radius: 0px 0px 25.6px 25.6px;
+  box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+    rgba(0, 0, 0, 0.15) 4px 4px 15px 0px, #ffffff 0px 0px 0px 0px,
+    #ffffff 2px 2px 2px 0px inset, #c7c7c7 -2px -2px 2px 0px inset;
+  padding-inline: 50px;
+  padding-block: 30px;
+}
+.OurClients_Card_Two_Content {
+  color: #8f8f8f;
+  font-size: 23.04px;
+  line-height: 34.56px;
+  transform: matrix(1, 0, 0, 1, 38.4, 0);
+}
+.YellowMark {
+  background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
+  border-radius: 10.0147px;
+  display: inline-block;
+  font-size: 38.4px;
+  font-weight: 600;
+  line-height: 34.56px;
+  text-align: center;
+}
+.YelloMarkReverse {
+  background-image: linear-gradient(90deg, #ffd042, #ffdc74);
+  border-radius: 6.00883px;
+  color: #eeeeee;
+  display: inline-block;
+  font-size: 23.04px;
+  font-weight: 600;
+  line-height: 20.736px;
+}
+.OurClients_Marquee {
+  z-index: -10;
+}
+
+
+/* * */
+.content {
+  --gap: clamp(1rem, 6vw, 3rem);
+  --content: min(77ch, 100% - var(--gap) * 2);
+  --popout: minmax(0, 2rem);
+  --feature: minmax(0, 5rem);
+  --full: minmax(var(--gap), 1fr);
+  display: grid;
+  grid-template-columns:
+    [full-start] var(--full)
+    [feature-start] var(--feature)
+    [popout-start] var(--popout)
+    [content-start] var(--content) [content-end]
+    var(--popout) [popout-end]
+    var(--feature) [feature-end]
+    var(--full) [full-end];
+}
+.content > * {
+  grid-column: content;
+}
+.popout {
+  grid-column: popout;
+}
+.feature {
+  grid-column: feature;
+}
+.full {
+  grid-column: full;
+}
+
+
+/* *** */
+.OurClients_Slide {
+  display: flex;
+  flex-direction: column;
+  padding-inline: 50px;
+  padding-top: 70px;
+  padding-bottom: 50px;
+}
+.OurClients_Slide_Container {
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+.OurClients_Slide_Media {
+  display: flex;
+}
+.OurClients_Slide_Button {
+  align-self: end;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+}
+.OurClients_Slide_Title {
+  font-size: 33.28px;
+  font-weight: 600;
+  line-height: 39.936px;
+  padding-block: 30px;
+}
+.OurClients_Slide_Media_Rating {
+  margin-left: -50px;
+  display: flex;
+  gap: 10px;
+}
+.OurClients_Slide_Star_Reviewer {
+  font-size: 10.624px;
+  font-weight: 600;
+  line-height: 10.624px;
+}
+.OurClients_Slide_Star_Company {
+  font-size: 10.624px;
+  font-weight: 300;
+  line-height: 10.624px;
+}
+.ArrowButton {
+  display: flex;
+  height: 2em;
+  width: 2em;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.52em;
+  border-radius: 5.21em;
+  background-color: #ffc600;
+  padding: 0.52em;
+  font-weight: bold;
+  box-shadow: 0px 0.15em black;
+  transition: transform 0.05s cubic-bezier(0.5, 1, 0.7, 0.7),
+    box-shadow 0.05s cubic-bezier(0.5, 1, 0.7, 0.7),
+    border 0.05s cubic-bezier(0.5, 1, 0.7, 0.7);
+  border: 0.1em solid #000000;
+}
+.ArrowButton:hover {
+  transform: translateY(0.3em);
+  box-shadow: none;
+}
+.ArrowButton_Arrow {
+  font-size: 1em;
+  font-weight: bolder;
+}
+.OurClients_Slide_Button_Text {
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+}
+.OurClients_Slide_Last {
+  padding-inline: 180px;
+  padding-block: 110px;
+}
+.YellowMarkSlide {
+  background-image: linear-gradient(90deg, #ffd042, #ffdc74);
+  border-radius: 8.67942px;
+  display: inline-block;
+  font-size: 33.28px;
+  font-weight: 600;
+  line-height: 29.952px;
+}
+
+/* Carousel */
+.embla {
+  --slide-spacing: 1rem;
+  --slide-size: 100%;
+  --slide-height: 19rem;
+}
+.embla__viewport {
+  overflow: hidden;
+}
+.embla__container {
+  backface-visibility: hidden;
+  display: flex;
+  touch-action: pan-y;
+  margin-left: calc(var(--slide-spacing) * -1);
+}
+.embla__slide {
+  flex: 0 0 var(--slide-size);
+  min-width: 0;
+  padding-left: var(--slide-spacing);
+  position: relative;
+}
+.embla__slide__img {
+  display: block;
+  height: var(--slide-height);
+  width: 100%;
+  object-fit: cover;
+}
+.embla__slide__number {
+  width: 4.6rem;
+  height: 4.6rem;
+  z-index: 1;
+  position: absolute;
+  top: 0.6rem;
+  right: 0.6rem;
+  border-radius: 50%;
+  background-color: rgba(var(--background-site-rgb-value), 0.85);
+  line-height: 4.6rem;
+  font-weight: 900;
+  text-align: center;
+  pointer-events: none;
+}
+.embla__slide__number > span {
+  color: var(--brand-primary);
+  background-image: linear-gradient(
+    45deg,
+    var(--brand-primary),
+    var(--brand-secondary)
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 1.6rem;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.OurClients_Slide_ButtonNext {
+  align-self: end;
+  display: flex;
+  align-items: center;
+  gap: 30px;
+  cursor: pointer;
+  font-size: 25.6px;
+  font-weight: 600;
+  line-height: 34.432px;
+  text-align: center;
+  justify-content: end;
+  padding-bottom: 40px;
+  padding-inline: 50px;
+  margin: 50px 0 0;
+}
+/* -------------- */
+.review {
+  background: white;
+  padding: 100px 0;
+}
+.brandSlide .OurClients_Slide_ButtonNext {
+  margin: -140px 0 0;
+}
+.embla__viewport {
+  overflow: hidden;
+  box-shadow: 0 0 10px lightgray;
+  border-radius: 30px;
 }
