--- a/src/components/organisms/team/image-slider/imageslider.css
+++ b/src/components/organisms/team/image-slider/imageslider.css
@@ -25,3 +25,6 @@
 /* .carousel-control-next-icon{
     background-image: url('/public/assets/images/arrow.png');
 } */
+
+
+/* ------------------------- */
