--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -19,7 +19,7 @@ h6 {
 
 .top-banner-text {
   float: left;
-  padding: 60px 0;
+  padding: 0px 0 40px;
   line-height: 1.3;
 }
 
@@ -69,6 +69,7 @@ h6 {
   letter-spacing: -0.025em;
   color: #373737;
 }
+
 .projects-under-top-banner-text p {
   font-size: 22px;
   color: #767676;
@@ -90,6 +91,7 @@ h6 {
   position: relative;
   width: 100%;
   height: 66px;
+  margin-top: -30px;
 }
 
 .download-catalog-button-2 {
@@ -122,7 +124,6 @@ h6 {
 
 .logo-home img,
 .logo-home picture {
-  object-fit: contain;
   max-width: 100%;
 }
 
@@ -153,9 +154,9 @@ h6 {
 
 .logo-home img,
 .logo-home picture {
-  object-fit: contain;
   max-width: 89%;
 }
+
 .projects-top-logo {
   padding: 10px 10px;
 }
@@ -221,18 +222,8 @@ h6 {
   margin-top: 90px;
 }
 
-.projects-theme-desc-p {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-.theme-desc {
-  margin-bottom: 40px;
-  color: #515151;
-  font-family: "Georgia";
-  font-size: 26px;
-  line-height: 33px;
-  letter-spacing: -0.025em;
-}
+
+
 
 .projects-lprasa-container {
   text-align: right;
@@ -241,6 +232,7 @@ h6 {
 .projects-custom-margin {
   margin-top: 50px;
 }
+
 .projects-custom-lineheight {
   line-height: 33px;
 }
@@ -261,6 +253,7 @@ h6 {
   padding: 15px 0px;
   position: relative;
 }
+
 .opinion-box {
   margin-top: 85px;
 }
@@ -269,13 +262,16 @@ h6 {
   left: 0px;
   right: auto;
 }
+
 .custom-text-align-right {
   text-align: right !important;
 }
+
 .opinion-box-image-right {
   right: 0px !important;
   left: auto !important;
 }
+
 .opinion-box-image {
   position: absolute;
   z-index: 1;
@@ -296,6 +292,7 @@ h6 {
   height: auto !important;
   min-height: 0px !important;
 }
+
 .opinion-client-bg-jakub {
   position: relative;
   padding: 0px !important;
@@ -332,7 +329,7 @@ h6 {
 }
 
 .opinion-box-text {
-  font-size: 40px;
+  font-size: 45px;
   font-family: "Georgia";
   color: rgb(81, 81, 81);
   line-height: 1.25;
@@ -374,8 +371,8 @@ h6 {
   margin-bottom: 40px;
   color: #373737;
   font-family: "Georgia";
-  font-size: 26px;
-  line-height: 28px;
+  font-size: 40px;
+  line-height: 45px;
   letter-spacing: -0.025em;
 }
 
@@ -389,10 +386,6 @@ h6 {
   margin-right: 0px;
 }
 
-.projects-theme-desc-p {
-  margin-left: 0px;
-  margin-right: 0px;
-}
 
 .projects-includes-ul {
   list-style-type: disc !important;
@@ -448,8 +441,7 @@ h6 {
 }
 
 .projects-big-text100 {
-  font-family: "Arial";
-  font-size: 18px;
+  font-size: 20px;
   letter-spacing: -0.025em;
   line-height: 22px;
   margin-bottom: 50px;
@@ -458,21 +450,6 @@ h6 {
 .projects-download-catalog-button {
   font-size: 25px;
   max-width: 485px;
-}
-
-.download-catalog-button-2 {
-  width: 490px;
-  background: #f2c22f;
-  border: transparent;
-  padding: 16px 3px;
-  color: black;
-  font-weight: 500;
-  font-size: 22px;
-  bottom: 4px;
-  left: 0;
-  z-index: 10;
-  display: inline;
-  letter-spacing: -0.025em;
 }
 
 .projects-button-margin {
@@ -484,25 +461,6 @@ h6 {
   font-size: 72px;
   font-weight: 900;
   margin-bottom: 25px;
-}
-
-.logo-home img,
-.logo-home picture {
-  object-fit: contain;
-  max-width: 89%;
-}
-
-.projects-theme-desc-p {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-.theme-desc {
-  margin-bottom: 40px;
-  color: #515151;
-  font-family: "Georgia";
-  font-size: 26px;
-  line-height: 33px;
-  letter-spacing: -0.025em;
 }
 
 .projects-theme-title3 {
@@ -564,22 +522,11 @@ h6 {
   color: #515151;
 }
 
-.projects-theme-desc-p {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-.theme-desc {
-  margin-bottom: 40px;
-  color: #515151;
-  font-family: "Georgia";
-  font-size: 26px;
-  line-height: 33px;
-  letter-spacing: -0.025em;
-}
 
 .projects-happy-clients-margin {
   margin-top: 250px;
 }
+
 .projects-co-otrzymasz-sub {
   margin-bottom: 45px;
   font-size: 40px;
@@ -589,41 +536,23 @@ h6 {
   color: #373737;
 }
 
-.img-background-logop-rwd {
-  display: none;
-}
-
 .projects-wierzymy-img {
   position: absolute;
   right: 0;
   left: -330px;
 }
 
-.projects-catalog-submit-buttom {
-  margin-left: 0px;
-  margin-top: 50px;
-}
 .logo-button-box {
   height: auto;
   margin-left: 0;
 }
-.catalog-submit-button {
-  position: relative;
-  width: 100%;
-  height: 66px;
-  margin-top: -30px;
-}
+
 .during-page-offer {
   text-align: center;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
-.logo-home img,
-.logo-home picture {
-  object-fit: contain;
-  max-width: 89%;
-}
 .galeria-logo-style {
   margin-bottom: -20vw;
 }
@@ -640,15 +569,6 @@ h6 {
   margin-bottom: 50px;
 }
 
-.projects-co-otrzymasz-sub {
-  margin-bottom: 45px;
-  font-size: 40px;
-  letter-spacing: -0.025em;
-  font-family: "Playfair Display";
-  line-height: 38px;
-  color: #373737;
-}
-
 .projects-custom-container1 {
   padding-bottom: 0px;
 }
@@ -656,6 +576,7 @@ h6 {
 .projects-logotyp {
   padding: 0px 35px;
 }
+
 .projects-logotyp-fix-size {
   max-height: initial !important;
 }
@@ -667,10 +588,7 @@ h6 {
   font-size: 26px;
 }
 
-.projects-download-catalog-button {
-  font-size: 25px;
-  max-width: 485px;
-}
+
 .download-catalog-button {
   width: 415px;
   background: #f2c22f;
@@ -684,10 +602,6 @@ h6 {
   z-index: 10;
   display: inline;
   letter-spacing: -0.025em;
-}
-
-.galeria-logo-style {
-  margin-bottom: -20vw;
 }
 
 .projects-krok-po-kroku {
@@ -729,6 +643,7 @@ h6 {
   text-align: center;
   margin-top: 100px;
 }
+
 .theme-subtitle {
   display: block;
   color: #818181;
@@ -758,14 +673,8 @@ h6 {
   margin-bottom: 30px;
 }
 
-.projects-push-content-top {
-  margin-top: 90px;
-}
 
-.projects-theme-desc-p {
-  margin-left: 0px;
-  margin-right: 0px;
-}
+
 
 .z-index-2 {
   z-index: 2 !important;
@@ -775,15 +684,18 @@ h6 {
   margin-right: -74px;
   margin-left: -40px;
 }
+
 .signed-quote-image {
   font-family: "Playfair Display", serif;
   font-style: Italic;
   letter-spacing: -0.025em;
 }
+
 .signed-quote {
   margin: 24px 0px;
   font-family: "Georgia", serif;
 }
+
 .theme-quote {
   font-size: 60px;
   font-family: "Playfair Display", serif;
@@ -831,12 +743,9 @@ h6 {
 .projects-custom-margin-2 {
   margin-right: -55px;
 }
+
 .projects-custom-push-top-td {
   padding-top: 90px;
-}
-.projects-theme-desc-p {
-  margin-left: 0px;
-  margin-right: 0px;
 }
 
 .custom-container1-image {
@@ -869,23 +778,10 @@ h6 {
   margin-top: 100px;
 }
 
-.projects-theme-title-2 {
-  color: #252424;
-  font-family: "Playfair Display";
-  font-size: 42px;
-  line-height: 1.4;
-  font-weight: 900;
-  padding-top: 35px;
-  letter-spacing: -0.025em;
-  text-align: center;
-  line-height: 52px;
-  position: relative;
-  margin-bottom: 30px;
-}
-
 .projects-mb-30 {
   margin-bottom: 30px;
 }
+
 .projects-image-810-container {
   margin: 0px;
 }
@@ -901,15 +797,12 @@ h6 {
     padding-top: 270px;
   }
 }
+
 .projects-thematic-section-blue {
   background-color: #021934;
   min-height: 500px;
   position: relative;
   z-index: 1;
-}
-
-.projects-over-hid {
-  overflow: hidden;
 }
 
 .projects-h-100 {
@@ -933,11 +826,6 @@ h6 {
 .projects-rwd-hide-img2 {
   display: none;
 }
-
-.projects-blue-section-m-text {
-  margin-top: 40px;
-}
-
 .projects-blue-img-rwd {
   text-align: right;
 }
@@ -979,6 +867,7 @@ h6 {
   color: #fff;
   padding-bottom: 1px;
 }
+
 .names-thematic-section-black {
   background-color: #000000;
 }
@@ -1097,14 +986,6 @@ h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.contact-form-2020 input,
-.contact-form-2020 .contact-input,
-.contact-form-2020 .contact-inputs,
-.contact-form-2020,
-.form-container {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-}
-
 .contact-inputs {
   margin-bottom: 30px;
 }
@@ -1116,6 +997,7 @@ h6 {
 .contact-input2 {
   margin-right: 30px;
 }
+
 .contact-input {
   width: calc((100% / 3) - 20px);
   float: left;
@@ -1126,6 +1008,7 @@ h6 {
 contact-inputs textarea {
   caret-color: #438d07;
 }
+
 .input-parent-new-form input,
 .input-parent-new-form textarea {
   border-top: 2px solid #a4a4a4;
@@ -1133,6 +1016,7 @@ contact-inputs textarea {
   border-left: 2px solid #a4a4a4;
   border-bottom: 2px solid #a4a4a4;
 }
+
 .contact-input input,
 .contact-input textarea {
   /* border: transparent; */
@@ -1145,6 +1029,7 @@ contact-inputs textarea {
   height: 1px;
   background: #a4a4a4;
 }
+
 .prog-bar-bg {
   position: absolute;
   left: 0;
@@ -1179,15 +1064,7 @@ contact-inputs textarea {
   padding: 8px 0 5px 8px;
   z-index: 2;
 }
-.input-parent-new-form .input-placeholder {
-  position: absolute;
-  pointer-events: none;
-  background-color: #fff;
-  width: calc(100% - 2px);
-  left: 1px;
-  height: calc(100% - 2px);
-  top: 1px;
-}
+
 .input-placeholder {
   position: absolute;
   bottom: 3px;
@@ -1240,6 +1117,7 @@ contact-inputs textarea {
 .texts-green-bold {
   font-weight: 900;
 }
+
 .texts-green-color {
   color: #438d07;
 }
