feat(home): start rating component added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,7 +119,6 @@ body {
   z-index: -10;
 }
 
-
 /* * */
 .content {
   --gap: clamp(1rem, 6vw, 3rem);
@@ -149,7 +148,6 @@ body {
 .full {
   grid-column: full;
 }
-
 
 /* *** */
 .OurClients_Slide {
@@ -332,3 +330,18 @@ body {
   box-shadow: 0 0 10px lightgray;
   border-radius: 30px;
 }
+
+/* star */
+.star {
+  color: #fdc818;
+  margin-right: 5px;
+  font-size: 24px;
+  filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
+}
+
+.empty {
+  /* filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5)); */
+  color: #855214;
+  font-size: 24px;
+}
+/* star */
