--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,7 +119,6 @@ body {
   z-index: -10;
 }
 
-
 /* * */
 .content {
   --gap: clamp(1rem, 6vw, 3rem);
@@ -149,7 +148,6 @@ body {
 .full {
   grid-column: full;
 }
-
 
 /* *** */
 .OurClients_Slide {
@@ -329,6 +327,6 @@ body {
 }
 .embla__viewport {
   overflow: hidden;
-  box-shadow: 0 0 10px lightgray;
+  /* box-shadow: 0 0 10px lightgray; */
   border-radius: 30px;
 }
