--- a/src/app/projektowanie-logo/logoDesign.css
+++ b/src/app/projektowanie-logo/logoDesign.css
@@ -222,9 +222,6 @@ h6 {
   margin-top: 90px;
 }
 
-
-
-
 .projects-lprasa-container {
   text-align: right;
 }
@@ -386,7 +383,6 @@ h6 {
   margin-right: 0px;
 }
 
-
 .projects-includes-ul {
   list-style-type: disc !important;
 }
@@ -522,7 +518,6 @@ h6 {
   color: #515151;
 }
 
-
 .projects-happy-clients-margin {
   margin-top: 250px;
 }
@@ -587,7 +582,6 @@ h6 {
   max-width: inherit;
   font-size: 26px;
 }
-
 
 .download-catalog-button {
   width: 415px;
@@ -672,9 +666,6 @@ h6 {
   position: relative;
   margin-bottom: 30px;
 }
-
-
-
 
 .z-index-2 {
   z-index: 2 !important;
@@ -1120,4 +1111,10 @@ contact-inputs textarea {
 
 .texts-green-color {
   color: #438d07;
+}
+
+.orange-link:hover {
+  color: #e0ab06;
+  border-bottom: 2px #e0ab06 dotted;
+  cursor: pointer;
 }
