--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -33,7 +33,7 @@
 }
 
 .ss_input-container input {
-  margin: 0 10px;
+  margin: 0 18px;
   width: 50%;
 }
 
@@ -160,3 +160,44 @@
 }
 
 /* component three */
+
+/* slider range input */
+.slider-input {
+  height: 16px;
+  outline: none;
+  border: none;
+  border-radius: 10px;
+  position: relative;
+}
+
+input[type="range"] {
+  /* width: 100%; */
+  -webkit-appearance: none;
+  background: #9b8993;
+  z-index: 1;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 18px;
+  width: 18px;
+  background-color: #ddd;
+  border-radius: 50%;
+  border: none;
+  margin: -3px 0 0;
+  transition: 0.2s ease-in-out;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+  /* box-shadow: 0 0 0 12px rgb(255, 255, 255); */
+  box-shadow: 0 0 0 12px rgba(255, 255, 255, 1), 0 0 20px rgba(0, 0, 0, 0.2);
+}
+input[type="range"]:active::-webkit-slider-thumb {
+  box-shadow: 0 0 0 14px rgb(255, 255, 255);
+}
+input[type="range"]:focus::-webkit-slider-thumb {
+  box-shadow: 0 0 0 12px rgb(255, 255, 255);
+}
+
+/* slider range input */
