--- a/src/components/organisms/cennik/cennikCards.css
+++ b/src/components/organisms/cennik/cennikCards.css
@@ -201,3 +201,48 @@ input[type="range"]:focus::-webkit-slider-thumb {
 }
 
 /* slider range input */
+
+/* modal */
+.Modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  width: auto;
+  max-width: 80%;
+  height: auto;
+  max-height: 80vh;
+  padding: 50px 50px;
+  box-sizing: border-box;
+  border-radius: 30px;
+  color: white;
+}
+
+.Overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.Modal p {
+  font-size: 20px;
+  text-align: center;
+}
+.Modal div {
+  margin-top: 32px;
+}
+.Modal div button {
+  padding: 8px 16px;
+  border-radius: 12px;
+  border-color: #d21e00;
+  background-color: transparent;
+  color: white;
+}
