logo screen ui and functionalty fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -330,3 +330,16 @@ body {
   /* box-shadow: 0 0 10px lightgray; */
   border-radius: 30px;
 }
+
+/* -------------------------Accordion------------------------ */
+.copywriter-intro-bg-5-label {
+  font-family: "Playfair Display";
+  font-size: 72px;
+  font-weight: 900;
+  margin-bottom: 25px;
+}
+.img-background-logop {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+}
