--- a/src/components/organisms/logo/logo.css
+++ b/src/components/organisms/logo/logo.css
@@ -7,3 +7,6 @@
 .receive{
     padding: 100px 0 70px;
 }
+button.download-catalog-button-2.projects-download-catalog-button.send-offer-button.js--triggerAnimation:hover {
+    background: #d4aa28;
+}
