--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   max-height: 685px;
 }
+
 .hero h1 {
   text-align: center;
   font-size: 5.4rem;
@@ -14,16 +15,16 @@
   color: white;
 
   /* mods after api */
-  width: 79%;
+  width: 68%;
   margin: 0 auto;
 }
 
 .hero h6 {
   text-align: center;
-  font-size: 1.4rem;
+  font-size: 2rem;
   font-weight: 700;
   line-height: 30px;
-  margin: 0 0 10px;
+  margin: 30px 0 20px;
   color: white;
 }
 
@@ -52,6 +53,7 @@
   color: white;
   background: transparent;
 }
+
 .heroBtn button:hover {
   background: #ffc600;
 }
@@ -92,17 +94,20 @@
 
 .heroImg1 {
   /* position: absolute; */
-  margin: -270px 0 0 0px;
+  margin: -180px 0 0 0px;
   width: 350px;
 }
+
 .heroImg2 {
-  margin: -390px 0 0 -750px;
+  margin: -310px 0 0 -750px;
   width: 650px;
 }
+
 .heroImg3 {
   margin: -399px 0 0 900px;
   width: 450px;
 }
+
 .heroImg4 {
   margin: -530px 0 0 1060px;
   width: 500px;
@@ -115,6 +120,7 @@
   z-index: -1;
   top: 0;
 }
+
 .orangeBG img {
   margin: -50px 0 0 570px;
   opacity: 0.5;
@@ -123,4 +129,178 @@
 .subtitleContainer {
   width: 42%;
   margin: 10px auto 0 auto;
+}
+
+/* ----------------------------------media screen------------------------------------ */
+@media screen and (max-width: 1520px) {
+  .heroImg1 {
+    /* position: absolute; */
+    margin: -180px 0 0 0px;
+    width: 250px;
+  }
+
+  .heroImg2 {
+    margin: -310px 0 0 -600px;
+    width: 550px;
+  }
+
+  .heroImg3 {
+    margin: -399px 0 0 850px;
+    width: 350px;
+  }
+
+  .heroImg4 {
+    margin: -530px 0 0 970px;
+    width: 400px;
+  }
+
+  .hero {
+    max-height: 565px;
+  }
+
+  .subtitleContainer {
+    width: 45%;
+    margin: 10px auto 0 auto;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .hero h1 {
+    font-size: 60px;
+    line-height: 70px;
+    width: 80%;
+  }
+
+  .heroVideo {
+    background: black;
+    padding: 170px 0 200px;
+
+  }
+
+  .heroImg1 {
+    /* position: absolute; */
+    margin: -115px 0 0 0px;
+    width: 170px;
+  }
+
+  .heroImg2 {
+    margin: -184px 0 0 -390px;
+    width: 350px;
+  }
+
+  .heroImg3 {
+    margin: -209px 0 0 500px;
+    width: 250px;
+  }
+
+  .heroImg4 {
+    margin: -330px 0 0 600px;
+    width: 250px
+  }
+
+  .subtitleContainer {
+    width: 75%;
+  }
+
+  .heroBtn {
+    display: block;
+    margin: 0 auto;
+    width: 270px;
+  }
+
+  .heroBtn a {
+    padding: 0px 0 20px 20px;
+    justify-content: center;
+  }
+
+  .hero {
+    max-height: 650px;
+  }
+
+}
+
+@media screen and (max-width: 767px) {
+  .heroVideo {
+    padding: 180px 0 404px;
+  }
+
+  .hero {
+    max-height: 540px;
+  }
+
+  .hero h1 {
+    font-size: 35px;
+    line-height: 45px;
+    width: 100%;
+  }
+
+  .subtitleContainer {
+    width: 100%;
+  }
+
+  .hero h6 {
+    font-size: 20px;
+    line-height: 20px;
+    margin: 15px 0 10px;
+  }
+
+  .hero p {
+    font-size: 20px;
+  }
+
+  .heroBtn {
+    padding: 8px 20px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  .heroBtn a span {
+    font-size: 16px;
+    margin: 0;
+  }
+
+  .heroBtn img {
+    width: 15px;
+  }
+
+  .heroBtn .heroPlay {
+    width: 30px;
+    height: 30px;
+  }
+  .heroImg1 {
+    margin: -23px 0 0 0px;
+    width: 130px;
+  }
+
+  .heroImg2 {
+    margin: -78px 0 0 -280px;
+    width: 250px;
+  }
+
+  .heroImg3 {
+    margin: -170px 0 0 260px;
+    width: 180px;
+  }
+
+  .heroImg4 {
+    margin: -236px 0 0 330px;
+    width: 180px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .heroImg3 {
+    margin: -170px 0 0 180px;
+    width: 180px;
+  }
+
+  .heroImg4 {
+    margin: -236px 0 0 240px;
+    width: 180px;
+  }
+  .heroVideo {
+    padding: 180px 0 507px;
+  }
+  .hero {
+    max-height: 580px;
+  }
 }
