--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -2,14 +2,17 @@
 .enter {
   padding: 100px 0;
 }
+
 .Content {
   max-width: 800px;
   margin: 0 auto;
 }
+
 .enter img {
   margin: 0 auto;
   display: block;
 }
+
 .Content h2 {
   font-size: 90px;
   text-align: center;
@@ -17,6 +20,7 @@
   color: #333333;
   margin: 0 0 70px -50px;
 }
+
 .Content h3 {
   font-size: 50px;
   text-align: center;
@@ -24,6 +28,7 @@
   color: #333333;
   margin: 0 0 70px -50px;
 }
+
 .Content h4 {
   font-size: 35px;
   text-align: left;
@@ -31,6 +36,7 @@
   color: #333333;
   margin: 0 0 50px 0px;
 }
+
 .Content h4 span {
   font-weight: 600;
   background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
@@ -38,6 +44,7 @@
   border-radius: 100px;
   display: inline-block;
 }
+
 .Content p .gradient {
   font-weight: 600;
   background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
@@ -45,6 +52,7 @@
   border-radius: 100px;
   display: inline-block;
 }
+
 .Content p {
   text-align: left;
   font-size: 28px;
@@ -53,6 +61,7 @@
   line-height: 50px;
   margin: 0 0 40px;
 }
+
 .Content p span {
   font-weight: 500;
 }
@@ -61,6 +70,7 @@
 .numbers {
   padding: 0px 0 100px;
 }
+
 .numbers h2 span {
   font-weight: 800;
   background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
@@ -68,6 +78,7 @@
   border-radius: 100px;
   display: inline-block;
 }
+
 .numberMB {
   margin-bottom: 15px !important;
 }
@@ -80,6 +91,7 @@
   gap: 80px;
   margin: 40px 0 0px;
 }
+
 .gradientBG {
   font-weight: 600;
   background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
@@ -87,9 +99,11 @@
   border-radius: 100px;
   display: inline-block;
 }
+
 .hardMB {
   margin-bottom: 10px !important;
 }
+
 .hardResult h4 {
   font-size: 50px;
   text-align: left;
@@ -97,6 +111,7 @@
   color: #333333;
   margin: 0 0 50px 0px;
 }
+
 .hardResult h4 span {
   font-weight: 600;
   background-image: linear-gradient(90deg, rgba(255, 198, 2, 0), #ffc602);
@@ -104,35 +119,44 @@
   border-radius: 100px;
   display: inline-block;
 }
+
 .hardBottomContent {
   font-size: 40px !important;
   font-weight: 300 !important;
 }
 
-/* ================================================== order================================= */
-.order{
-    border-radius: 30px;
-    display: grid;
-    grid-template-columns: 50% 50%;
-    margin: 0 0 50px;
+img.hardImg {
+  margin: 0 0 50px;
 }
+
+/* ================================================== order================================= */
+.order {
+  border-radius: 30px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  margin: 0 0 50px;
+}
+
 .order .orderContent {
   background: #141414;
   border-radius: 50px 0 0 50px;
   padding: 90px;
 }
+
 .order .orderContent h2 {
   color: white;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 600;
   margin: 0 0 60px;
 }
+
 .order .orderContent p {
   color: lightgray;
-  font-size: 30px;
+  font-size: 28px;
   margin: 0 0 60px;
   font-weight: 400;
 }
+
 .order .orderContent button {
   width: 100%;
   padding: 10px;
@@ -154,41 +178,145 @@
   border-radius: 0px 50px 50px 0px;
   overflow: hidden;
 }
+
 .order .orderImg img {
   width: 100%;
 }
+
 .ratingContent {
   margin-top: -300px;
   padding: 50px;
 }
+
 .ratingContent p {
   font-size: 20px;
   color: white;
   text-align: center;
 }
+
 .ratingContent .rating {
   display: flex;
   gap: 20px;
   justify-content: center;
   align-items: center;
 }
+
 .ratingContent .star img {
   width: 30px;
 }
+
 .ratingContent .star {
   display: flex;
   gap: 10px;
   align-items: center;
 }
+
 .ratingNumber p {
   margin: 0;
   font-size: 25px;
   font-weight: 400;
 }
+
 .ratingNumber p span {
   font-weight: 600;
 }
-.pinkBG{
-    padding: 50px 0;
-    background-image: linear-gradient(173deg,#e3e3e3 53%,#fbb1b6);
+
+.pinkBG {
+  padding: 50px 0;
+  background-image: linear-gradient(173deg, #e3e3e3 53%, #fbb1b6);
+}
+
+/* -------------------------------media screen---------------------- */
+@media screen and (max-width: 1024px) {
+  .enter img {
+    width: 80%;
+  }
+
+  .Content h2 {
+    font-size: 70px;
+  }
+
+  img.hardImg {
+    width: 80%;
+  }
+
+  .Content h3 {
+    font-size: 40px;
+  }
+
+  .hardResult h4 {
+    font-size: 40px;
+    margin: 30px 0 0;
+  }
+
+  .ratingLogoImg img {
+    width: 35%;
+  }
+
+  .order {
+    grid-template-columns: 100%;
+  }
+
+  .order .orderContent {
+    border-radius: 50px 50px 0 0px;
+    padding: 70px;
+  }
+
+  .order .orderImg {
+    border-radius: 0px 0px 50px 50px;
+    overflow: hidden;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .Content h2 {
+    font-size: 35px;
+    margin: 0 0 40px 0px;
+  }
+
+  .Content h3 {
+    font-size: 20px;
+    margin: 0 0 70px 0px;
+  }
+
+  img.hardImg {
+    width: 90%;
+  }
+
+  .ratingLogoImg {
+    display: block;
+  }
+
+  .ratingLogoImg img {
+    display: block;
+    width: 70%;
+    margin: 0 auto 30px;
+  }
+
+  .order .orderContent h2 {
+    font-size: 35px;
+    line-height: 45px;
+    margin: 0 0 40px;
+  }
+
+  .order .orderContent p {
+    font-size: 20px;
+    margin: 0 0 40px;
+  }
+
+  .order .orderContent {
+    padding: 30px;
+  }
+
+  .order .orderContent button {
+    font-size: 20px;
+  }
+  .ratingContent {
+    margin-top: -200px;
+    padding: 50px;
+  }
+  .order .orderImg img {
+    border-radius: 0 0 50px 50px;
+  }
+
 }
