zamow screen : mobile responsive

--- a/src/app/zamow/zamow.css
+++ b/src/app/zamow/zamow.css
@@ -13,8 +13,7 @@
   z-index: 1;
 }
 .btt_btn_container {
-  margin: 100px auto;
-  margin-bottom: 200px;
+  margin: 50px auto 100px;
   text-align: center;
 }
 
