--- a/src/components/organisms/zamow/accordion/accordion.css
+++ b/src/components/organisms/zamow/accordion/accordion.css
@@ -42,3 +42,17 @@
 .icon {
   font-size: 24px;
 }
+@media only screen and (max-width:767px){
+  .accordion-heading {
+    font-size: 40px;
+}
+.question h4 {
+  font-size: 20px;
+}
+.question header {
+  padding: 24px 0px;
+}
+.question {
+  padding: 0px 0px;
+}
+}
