--- a/src/components/organisms/zamow/customer-rating/customer-rating.css
+++ b/src/components/organisms/zamow/customer-rating/customer-rating.css
@@ -9,6 +9,7 @@
 .emphasized-text {
   font-size: 42px;
   font-weight: 400;
+  max-width: 500px;
 }
 
 .text-color {
@@ -25,4 +26,40 @@
 
 .img-left-merge {
   margin-left: -30px;
+}
+p.brand-description {
+  text-align: center;
+  font-size: 26px;
+  max-width: 700px;
+  margin: 30px auto;
+  font-weight: 300;
+}
+@media only screen and (max-width: 1024px) {
+  .brand-img-container{
+    display: block;
+  }
+  .brand-img-container img{
+    display: block;
+    margin: 20px auto 0;
+  }
+  .emphasized-text {
+    max-width: 400px;
+    font-size: 35px;
+}
+}
+@media only screen and (max-width: 767px){
+.brand-img-container img {
+    display: block;
+    margin: 20px auto 0;
+    width: 100%;
+}
+.image-container img {
+  width: 50%;
+}
+p.brand-description {
+  font-size: 22px;
+}
+.image-container {
+  padding: 50px 0;
+}
 }
