--- a/src/components/organisms/zamow/results/results.css
+++ b/src/components/organisms/zamow/results/results.css
@@ -53,3 +53,16 @@
   text-align: center;
   margin-bottom: 50px;
 }
+@media only screen and (max-width: 1024px){
+  .free-test {
+    padding: 40px 0 70px;
+}
+}
+@media only screen and (max-width: 767px){
+  .result-title {
+    font-size: 50px;
+}
+.free-test h2 {
+  font-size: 40px;
+}
+}
