konsultacje screen : mobile responsive design

--- a/src/components/organisms/marketing-consulting/expectation/expect.css
+++ b/src/components/organisms/marketing-consulting/expectation/expect.css
@@ -7,9 +7,9 @@
 }
 
 .wte_header h2 {
-  font-weight: 900;
+  font-weight: 700;
   font-size: 60px;
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
 .wte_header p {
@@ -27,4 +27,34 @@
 .wte_end {
   width: 65%;
   margin: 0 auto;
+}
+@media only screen and (max-width: 1024px){
+  .wte_header p {
+    width: 100%;
+}
+.wte {
+  padding: 70px 0;
+}
+.wte_header h2 {
+  margin-bottom: 50px;
+}
+.wte_end {
+  width: 100%;
+}
+}
+@media only screen and (max-width: 767px){
+  img.leaf_img {
+    display: none;
+}
+.logoImg{
+  width: 90%;
+}
+.wte_header h2 {
+  margin-bottom: 50px;
+  font-size: 49px;
+}   
+.wte_header p {
+  width: 100%;
+  font-size: 22px;
+}
 }
