--- a/src/components/organisms/marketing-consulting/stand-out/stand-out.css
+++ b/src/components/organisms/marketing-consulting/stand-out/stand-out.css
@@ -13,7 +13,7 @@
 }
 
 .so_flex h2 {
-  font-weight: 900;
+  font-weight: 700;
   font-size: 42px;
 }
 
@@ -50,4 +50,67 @@
 
 .so_img {
   margin: 50px auto;
+}
+.so_img img {
+  width: 90%;
+  margin: 0 auto;
+  display: block;
+}
+@media only screen and (max-width: 1024px){
+  .so_header h1 {
+    font-size: 70px;
+    font-weight: 800;
+}
+.so_header p {
+  font-size: 30px;
+}
+.so_sec {
+  padding: 50px 0;
+}
+.so_paras {
+  width: 100%;
+}
+.so_flex {
+  display: block;
+}
+.so_flex img {
+  margin: 0 auto;
+  display: block;
+  width: 70%;
+}
+.so_flex h2 {
+  text-align: center;
+}
+.so_flex p {
+  text-align: center;
+}
+}
+@media only screen and (max-width: 767px){
+.so_header h1 {
+    font-size: 40px;
+    font-weight: 800;
+}
+.so_header p {
+  font-size: 24px;
+}
+.so_paras p {
+  font-size: 22px;
+  line-height: 36px;
+}
+.so_flex {
+  display: block;
+  padding: 20px 0 50px;
+}
+.so_flex h2 {
+  font-weight: 700;
+  font-size: 35px;
+  text-align: center;
+  margin: 30px 0 0;
+}
+.so_flex p {
+  font-size: 22px;
+  text-align: center;
+  line-height: 36px;
+  margin: 30px 0;
+}
 }
