--- a/src/components/organisms/marketing-consulting/customers-review/customers-review.css
+++ b/src/components/organisms/marketing-consulting/customers-review/customers-review.css
@@ -3,7 +3,7 @@
 }
 
 .cr_header h2 {
-  font-size: 120px;
+  font-size: 100px;
   font-weight: 700;
   margin-top: 100px;
   margin-bottom: 35px;
@@ -14,4 +14,21 @@
   font-weight: 500;
   width: 75%;
   margin: 0 auto;
+}
+@media only screen and (max-width: 1024px){
+  .cr_header h2 {
+    font-size: 70px;
+}
+.cr_header p {
+  font-size: 30px;
+  width: 100%;
+}
+}
+@media only screen and (max-width: 767px){
+  .cr_header h2 {
+    font-size: 50px;
+}
+.cr_header p {
+  font-size: 22px;
+}
 }
