--- a/src/components/organisms/marketing-consulting/pricing/pricing-option.css
+++ b/src/components/organisms/marketing-consulting/pricing/pricing-option.css
@@ -7,29 +7,17 @@
   font-weight: 500;
 }
 
-.po_subtitle {
-  font-size: 24px;
-  font-weight: 300;
+.po_title {
+  font-size: 70px;
+  font-weight: 500;
 }
 
 .po_card_custom {
-  /* box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.15), 0 0 0 #ffffff,
-    2px 2px 2px #ffffff inset, -2px -2px 2px #c7c7c7 inset;
-  border-radius: 30px;
-  min-height: 400px;
-  padding: 30px;
-  background-color: rgba(247, 247, 247, 1);
-  width: 60%;
-  margin: 30px auto;
-  display: flex;
-  justify-content: center; */
-
   box-shadow: 4px 4px 15px rgba(0, 0, 0, 0.15), 0 0 0 #ffffff,
     2px 2px 2px #ffffff inset, -2px -2px 2px #c7c7c7 inset;
   border-radius: 30px;
   padding: 36px 0;
   background-color: rgba(247, 247, 247, 1);
-  width: 75%;
   width: 60%;
   margin: auto;
 }
@@ -71,4 +59,47 @@
   color: white;
   font-size: 16px;
   font-weight: 400;
+  display: grid;
+  grid-template-columns: 20% 80%;
+  justify-content: center;
+  padding: 30px 100px;
+  gap: 30px;
+}
+
+@media only screen and (max-width: 1024px){
+  .po_card_custom {
+    width: 100%;
+  }
+  .po_pricing_sec {
+    padding: 50px 0 80px;
+}
+.po_title {
+  font-size: 40px;
+}
+.po_brands {
+  display: block;
+  text-align: start;
+  padding: 50px 20px;
+}
+.po_brands p {
+  text-align: left;
+}
+.po_brands img {
+  width: 100%;
+}
+}
+@media only screen and (max-width: 767px){
+  .po_title {
+    font-size: 30px;
+}
+.po_card_custom h2 {
+  font-size: 20px;
+}
+.po_brands {
+  text-align: start;
+}
+.po_brands {
+  text-align: start;
+  display: block;
+}
 }
