--- a/src/components/organisms/marketing-consulting/selected-projects/selected-projects.css
+++ b/src/components/organisms/marketing-consulting/selected-projects/selected-projects.css
@@ -2,15 +2,16 @@
   text-align: center;
 }
 .sp_header h2 {
-  font-weight: 800;
-  font-size: 120px;
-  margin-top: 150px;
-  margin-bottom: 35px;
+  font-size: 100px;
+  text-align: center;
+  font-weight: 700;
+  max-width: 900px;
+  margin: 100px auto 30px;
 }
-
 .sp_header p {
   font-weight: 500;
   font-size: 32px;
+  padding: 0 200px;
 }
 
 .sp_card_right {
@@ -29,5 +30,44 @@
 }
 
 .sp_card_container {
-  margin: 150px 0;
+  margin: 100px 0;
+}
+@media only screen and (max-width: 1024px){
+  .sp_header h2 {
+    font-size: 70px;
+    max-width: 100%;
+    margin: 70px auto 30px;
+}
+.sp_header p {
+  font-size: 28px;
+  padding: 0;
+}
+.sp_card_container {
+  margin: 70px 0;
+}
+.sp_card_left {
+  margin-right: 0;
+  width: 85%;
+}
+.sp_card_right {
+  width: 85%;
+  margin-left: 0;
+}
+}
+@media only screen and (max-width: 767px){
+  .sp_header h2 {
+    font-size: 50px;
+}
+.sp_header p {
+  font-size: 22px;
+}
+.sp_card_left {
+  width: 100%;
+}
+.left-card-img{
+  width: 100%;
+}
+.sp_card_right {
+  width: 100%;
+}
 }
