--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -49,9 +49,13 @@
 }
 .dropBtn {
   color: white;
-  font-size: 18px;
-  font-weight: normal;
-  line-height: 24px;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  
 }
 .navbar:hover .dropBtn {
   color: rgb(0, 0, 0);
@@ -73,7 +77,7 @@
 
 .headerRightBtn a {
   text-decoration: none;
-  color: white;
+  color: #262626;
 }
 .headerRightBtn:hover a,
 .navbar:hover a {
@@ -267,6 +271,117 @@ text-decoration: none;
 .mobileHeader{
   display: none;
 }
+
+/* ---------------------hover animations -------------------------------- */
+/* .navigation{
+  position: relative;
+  z-index: 11;
+}
+.navbar{
+  position: relative;
+  overflow: hidden;
+}
+.hover {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 14px;
+  background: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  animation-name: fadeFromTop; 
+  animation-duration: 800ms;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+.navbar:hover .hover {
+  opacity: 1; 
+  animation-name: fadeFromBottom; 
+}
+
+.navbar:not(:hover) .hover {
+  animation-name: fadeFromTop; 
+}
+
+@keyframes fadeFromTop {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+}
+
+@keyframes fadeFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+} */
+.navbar{
+  /* position: relative; */
+  overflow: hidden;
+}
+.dropMenu {
+  background: #fff;
+  position: absolute;
+  top: 160;
+  left: 0;
+  z-index: 1;
+  /* height: 100%; */
+  width: 100%;
+  opacity: 0;
+  animation-name: fadeFromTop; 
+  animation-duration: 800ms;
+  animation-timing-function: ease-out;
+  animation-fill-mode: forwards;
+}
+
+.headerDrop1:hover .dropMenu {
+  opacity: 1; 
+  animation-name: fadeFromBottom; 
+}
+
+.headerDrop1:not(:hover) .dropMenu {
+  animation-name: fadeFromTop; 
+}
+
+@keyframes fadeFromTop {
+  0% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+}
+
+@keyframes fadeFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0%);
+  }
+} 
+
+/* ------------------------------------media screen-------------------------------------------------------- */
 @media screen and (max-width: 1024px) {
   .navbar{
    display: none;
