--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -225,7 +225,14 @@ img.hardImg {
   padding: 50px 0;
   background-image: linear-gradient(173deg, #e3e3e3 53%, #fbb1b6);
 }
-
+.socialVideo video{
+  width: 800px !important;
+  margin: 0 auto;
+  display: block;
+}
+.brandingHeading{
+  font-size: 55px !important;
+}
 /* -------------------------------media screen---------------------- */
 @media screen and (max-width: 1024px) {
   .enter img {
@@ -265,6 +272,9 @@ img.hardImg {
   .order .orderImg {
     border-radius: 0px 0px 50px 50px;
     overflow: hidden;
+  }
+  .socialVideo video{
+    width: 100% !important;
   }
 }
 
