--- a/src/components/organisms/main/mark-side-card/mark.module.css
+++ b/src/components/organisms/main/mark-side-card/mark.module.css
@@ -14,9 +14,9 @@
     color: #333333;
 }
 .markCard p{
-    font-size: 20px;
+    font-size: 22px;
     font-weight: 300;
-    line-height: 38px;
+    line-height: 42px;
     color: #333333;
     margin: 20px 0;
 }
@@ -59,6 +59,9 @@
     width: 90%;
     margin: 0 auto;
     display: block;
+}
+.markVideo video {
+    width: 100% !important;
 }
 /* -------------------------------media screen---------------------- */
 @media screen and (max-width: 1024px) {
