--- a/src/components/organisms/ux/accordion/accordion.css
+++ b/src/components/organisms/ux/accordion/accordion.css
@@ -39,7 +39,7 @@
   left: 0;
   top: 0;
   bottom: 0;
-  background-color: #ffc223;
+  background-color: #ffffff;
   pointer-events: none;
   z-index: -1;
   -webkit-transition: width 0.3s ease-in-out;
