--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,11 @@
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+  /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@900&display=swap'); */
+@import "~bootstrap/dist/css/bootstrap.min.css";
 body {
   background: #e3e3e3;
+  font-family: 'Poppins', sans-serif !important;
 }
-@import "~bootstrap/dist/css/bootstrap.min.css";
+
 
 * {
   margin: 0;
