--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -129,6 +129,10 @@
   box-shadow: none;
   height: 90vh;
   padding: 50px 0;
+  transition-duration: 2s;
+  transition-timing-function: ease;
+  transition-delay: 0s;
+transition-property: all;
 }
 
 .dropMenu::before {
@@ -331,8 +335,7 @@ text-decoration: none;
     transform: translateY(0%);
   }
 } */
-.navbar{
-  /* position: relative; */
+/* .navbar{
   overflow: hidden;
 }
 .dropMenu {
@@ -341,7 +344,6 @@ text-decoration: none;
   top: 160;
   left: 0;
   z-index: 1;
-  /* height: 100%; */
   width: 100%;
   opacity: 0;
   animation-name: fadeFromTop; 
@@ -379,7 +381,7 @@ text-decoration: none;
     opacity: 1;
     transform: translateY(0%);
   }
-} 
+}  */
 
 /* ------------------------------------media screen-------------------------------------------------------- */
 @media screen and (max-width: 1024px) {
