--- a/src/components/organisms/main/main.module.css
+++ b/src/components/organisms/main/main.module.css
@@ -1,6 +1,6 @@
 /* ================================================== enter================================= */
 .enter {
-  padding: 100px 0;
+  padding: 0px 0 100px;
 }
 
 .Content {
