--- a/src/components/organisms/header/header.module.css
+++ b/src/components/organisms/header/header.module.css
@@ -5,9 +5,11 @@
   transition: background 2s;
   display: block;
 }
+
 .navbar:hover {
   background: rgb(255, 255, 255);
 }
+
 .leftNav {
   display: flex;
   gap: 30px;
@@ -17,6 +19,7 @@
 .headerDrop1:hover .dropMenu {
   display: block;
 }
+
 .headerLeftBtn {
   border-radius: 50px;
   padding: 5px 30px;
@@ -32,6 +35,7 @@
   text-decoration: none;
   color: white;
 }
+
 .headerLeftBtn:hover a,
 .navbar:hover a {
   color: rgb(0, 0, 0);
@@ -43,23 +47,46 @@
   color: rgb(255, 255, 255);
   border: 2px solid gray;
 }
+
 .navbar:hover .headerLeftBtn {
   color: black;
   border: 2px solid gray;
 }
+
 .dropBtn {
   color: white;
-    font-size: 18px;
-    font-weight: normal;
-    line-height: 24px;
-    display: flex;
-    align-items: center;
-    gap: 8px;
-  
+  font-size: 18px;
+  font-weight: normal;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  position: relative;
+
 }
+
+.dropBtn:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: -5px;
+  content: "";
+  display: block;
+  height: 1.5px;
+  left: 50%;
+  position: absolute;
+  background: #181818;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.dropBtn:hover:after {
+  width: 100%;
+  left: 0;
+}
+
 .navbar:hover .dropBtn {
   color: rgb(0, 0, 0);
 }
+
 .headerRightBtn {
   border-radius: 50px;
   padding: 5px 20px;
@@ -72,13 +99,13 @@
     box-shadow 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s,
     border 0.05s cubic-bezier(0.5, 1, 0.7, 0.7) 0s;
 
-  /* box-shadow: 0px 3px 0px #181818; */
 }
 
 .headerRightBtn a {
   text-decoration: none;
   color: #262626;
 }
+
 .headerRightBtn:hover a,
 .navbar:hover a {
   color: rgb(0, 0, 0);
@@ -90,15 +117,18 @@
   background: #ffc600;
   color: black;
 }
+
 .headerRightBtn:hover {
   box-shadow: none !important;
 }
+
 .rightNav {
   display: flex;
   gap: 10px;
   align-items: center;
   justify-content: flex-end;
 }
+
 .navRightMenu {
   color: white;
   font-size: 18px;
@@ -107,12 +137,34 @@
 .navRightMenu a {
   text-decoration: none;
   color: white;
+  position: relative;
 }
+
+.navRightMenu a:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: -5px;
+  content: "";
+  display: block;
+  height: 1.5px;
+  left: 50%;
+  position: absolute;
+  background: #181818;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.navRightMenu a:hover:after {
+  width: 100%;
+  left: 0;
+}
+
+
 
 .navbar:hover .navRightMenu {
   color: rgb(9, 9, 9);
   font-size: 18px;
 }
+
 .navbar:hover .navRightMenu a {
   color: rgb(9, 9, 9);
   font-size: 18px;
@@ -132,7 +184,7 @@
   transition-duration: 2s;
   transition-timing-function: ease;
   transition-delay: 0s;
-transition-property: all;
+  transition-property: all;
 }
 
 .dropMenu::before {
@@ -145,12 +197,14 @@ transition-property: all;
   z-index: 1111;
   top: -66px;
 }
+
 .headerMenu h3 {
   font-size: 28px;
   font-weight: 300;
   color: #c6c6c6;
   margin-bottom: 40px;
 }
+
 .headerMenu a {
   font-size: 20px;
   font-weight: 500;
@@ -159,11 +213,13 @@ transition-property: all;
   display: block;
   text-decoration: none;
 }
+
 .headerMenu a:hover {
   translate: 5px;
   transition-duration: 0.2s;
   color: #e74a50;
 }
+
 .headerDrop2BG {
   background: #f6f6f6;
   padding: 40px 0;
@@ -175,10 +231,9 @@ transition-property: all;
   display: none;
 }
 
-
 /* ------------------- */
 /* styles/Header.module.css */
-.mobileLeftBtn{
+.mobileLeftBtn {
   border-radius: 50px;
   padding: 5px 15px;
   background: transparent;
@@ -188,10 +243,12 @@ transition-property: all;
   font-weight: 500;
   font-size: 14px;
 }
-.mobileLeftBtn a{
+
+.mobileLeftBtn a {
   color: white;
-text-decoration: none;
+  text-decoration: none;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
@@ -205,14 +262,22 @@ text-decoration: none;
   font-size: 1.5rem;
 }
 
+.logo img {
+  margin-left: auto;
+  display: block;
+  width: 380px;
+}
+
 .nav {
   display: none;
   flex-direction: column;
 }
-.dropMenu{
+
+.dropMenu {
   display: none;
 }
-.dropMenu.dropOpen{
+
+.dropMenu.dropOpen {
   display: block;
 }
 
@@ -230,30 +295,34 @@ text-decoration: none;
   cursor: pointer;
   display: none;
 }
+
 .menuIcon span {
   font-size: 14px;
 }
-.mobileMenuList li{
+
+.mobileMenuList li {
   background: #f7fafd;
-    padding: 12px 20px;
-    border-radius: 10px;
-    border: 1px solid #d1e6fc;
-    margin: 0 0 20px;
+  padding: 12px 20px;
+  border-radius: 10px;
+  border: 1px solid #d1e6fc;
+  margin: 0 0 20px;
 }
-.mobileMenuList li a{
+
+.mobileMenuList li a {
   color: #202020;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: 500;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: 500;
 }
-.mobileDropBtn{
+
+.mobileDropBtn {
   color: black;
   display: flex;
   justify-content: space-between;
 }
 
 /* ======= */
-.MobileDropdownBtn{
+.MobileDropdownBtn {
   display: flex;
   border: navajowhite;
   background: transparent;
@@ -261,10 +330,12 @@ text-decoration: none;
   justify-content: space-between;
   font-size: 18px;
 }
+
 .menuItem {
   margin-top: 20px;
 }
-.menuItem a{
+
+.menuItem a {
   display: block;
   background: white;
   margin: 0 0 10px;
@@ -272,7 +343,8 @@ text-decoration: none;
   border-radius: 10px;
   border: 1px solid #eeeeee;
 }
-.mobileHeader{
+
+.mobileHeader {
   display: none;
 }
 
@@ -385,17 +457,20 @@ text-decoration: none;
 
 /* ------------------------------------media screen-------------------------------------------------------- */
 @media screen and (max-width: 1024px) {
-  .navbar{
-   display: none;
+  .navbar {
+    display: none;
   }
+
   .dropBtn {
     color: rgb(22, 22, 22);
     display: flex;
     justify-content: space-between;
   }
+
   .menuIcon {
     display: block;
   }
+
   .nav {
     position: absolute;
     top: 96px;
@@ -406,13 +481,11 @@ text-decoration: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     z-index: 11111;
   }
-  .mobileHeader{
+
+  .mobileHeader {
     display: block;
   }
-  
- }
 
-@media (max-width: 768px) {
-  
 }
 
+@media (max-width: 768px) {}
