--- a/src/components/organisms/main/Hero/hero.module.css
+++ b/src/components/organisms/main/Hero/hero.module.css
@@ -130,6 +130,14 @@
   width: 42%;
   margin: 10px auto 0 auto;
 }
+.heroVideo:before {
+  background: #00000080;
+  width: 100%;
+  height: 100%;
+  content: "";
+  position: absolute;
+  z-index: 0;
+}
 
 /* ----------------------------------media screen------------------------------------ */
 @media screen and (max-width: 1520px) {
