--- a/src/components/organisms/main/rating-captions/rating.module.css
+++ b/src/components/organisms/main/rating-captions/rating.module.css
@@ -57,9 +57,10 @@
     font-size: 65px;
     text-align: center;
     font-weight: 600;
-    margin: 0 0 40px;
     color: #333333;
     line-height: 60px;
+    max-width: 1000px;
+    margin: 0 auto 40px;
 }
 
 .ratingCOntent h2 span {
@@ -76,7 +77,8 @@
     font-weight: 300;
     color: #333333;
     line-height: 50px;
-    margin: 0 0 40px;
+    margin: 0 auto 40px;
+    max-width: 800px;
 }
 
 .ratingCOntent p span {
