--- a/src/components/organisms/main/rating-captions/rating.module.css
+++ b/src/components/organisms/main/rating-captions/rating.module.css
@@ -33,7 +33,7 @@
 .ratingMainImg img {
     width: 85%;
     height: auto;
-    margin: -100px auto 0;
+    margin: -320px auto -70px;
     display: block;
 }
 
