--- a/src/app/kalkulator/calculator.css
+++ b/src/app/kalkulator/calculator.css
@@ -7,13 +7,20 @@
 }
 
 .first-row p {
-  margin-top: 16px;
   font-size: 22px;
+  max-width: 800px;
+  margin: 20px auto;
 }
 
 .second-row h1 {
   font-weight: 700;
   font-size: 90px;
+}
+.second-row h1 span{
+  font-weight: 900;
+  font-size: 90px;
+  display: block;
+  margin-top: -20px;
 }
 
 .second-row p {
@@ -33,12 +40,18 @@
 
 .first-card p {
   font-weight: 500;
-  font-size: 18px;
+  font-size: 19px;
 }
 
 .second-card {
   border: none;
   border-radius: 10px;
+  background: rgb(255 198 0);
+  box-shadow: 4px 4px 15px 0px rgba(0,0,0,.15), 0px 0px 0px 0px #fff, 2px 2px 2px 0px #fff inset, -2px -2px 2px 0px #c7c7c7 inset;
+}
+.second-card img {
+  margin: -160px 0 0 0;
+  width: 100%;
 }
 
 .second-card h2 {
@@ -49,10 +62,17 @@
 .second-card h3 {
   font-weight: 900;
   font-size: 32px;
+  margin: 10px 0 0;
 }
 
+.second-card h6 {
+  font-size: 20px;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 0 0 16px;
+}
 .second-card p {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 400;
   color: gray;
   margin-top: 16px;
@@ -66,7 +86,7 @@
   font-weight: 900;
   width: 9rem;
   background: none;
-  color: #038fa5;
+  color: #a51904;
 }
 
 .calc_input:focus {
@@ -81,7 +101,7 @@ input[type="range"]::before {
   left: 0;
   width: calc((var(--value) - 10) / (9999 - 10) * 100%);
   height: 8px;
-  background-color: #003366;
+  background-color: #a51904;
   border-radius: 5px;
 }
 
@@ -96,7 +116,7 @@ input[type="range"]::before {
 input[type="range"] {
   width: 100%;
   -webkit-appearance: none;
-  background-color: #b7e7ec;
+  background-color: #ecbcb7;
   z-index: 1;
 }
 
@@ -105,7 +125,7 @@ input[type="range"]::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   border-radius: 999999px;
-  background: #0091a2;
+  background: #a51904;
   cursor: pointer;
   position: relative;
 }
@@ -135,8 +155,60 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+.calculator_container {
+  max-width: 800px;
+}
+.calculator_container p {
+  margin: 0 0 40px;
+}
 
+/* ---------------------warranty-------------------- */
+.warranty {
+  padding: 30px 0 100px;
+}
+.warranty_card {
+  background: #ffc600;
+  box-shadow: 4px 4px 15px 0px rgba(0,0,0,.15), 0px 0px 0px 0px #fff, 2px 2px 2px 0px #fff inset, -2px -2px 2px 0px #c7c7c7 inset;
+  border-radius: 30px;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  overflow: hidden;
+  padding: 70px;
+}
+section.warranty h2 {
+  font-size: 70px;
+  text-align: center;
+  font-weight: 700;
+  margin: 0 0 70px;
+}
+.warranty_card_img img {
+  width: 160%;
+  margin: 30px 0px -150px 30px;
+}
+.warranty_card_content h3 {
+  font-size: 60px;
+  font-weight: 700;
+}
+.warranty_card_content p {
+  font-size: 29px;
+  margin: 40px 0;
+}
+.warranty_card_content a {
+  font-size: 24px;
+  text-decoration: none;
+  color: white;
+  background: #d21e00;
+  padding: 10px 30px;
+  border-radius: 50px;
+  font-weight: 500;
+  box-shadow: 0 5px 0 #981a04;
+  border: 2px solid #981a04;
+}
 
+.warranty_card_content a:hover {
+  transform: translateY(5px);
+  box-shadow: none;
+}
 /* -------------------------------media screen---------------------- */
 @media screen and (max-width: 1024px) {
   .first-card {
@@ -146,14 +218,17 @@ input[type="number"].no-spinner::-webkit-outer-spin-button {
 .second-card {
   border-radius: 30px;
   width: 85%;
-  margin: -60px auto 50px;
+  margin: 0px auto 50px;
 }
 .second-card h2 {
   font-size: 55px;
 }
 .second-row h1 {
   font-weight: 700;
-  font-size: 70px;
+  font-size: 60px;
+}
+.warranty_card {
+  grid-template-columns: 100%;
 }
 }
 @media screen and (max-width: 767px) {
@@ -174,7 +249,45 @@ p.inputHeading {
   font-weight: 700;
   font-size: 30px;
 }
+.second-row span {
+  display: block;
+  font-weight: 900;
+  margin: -30px 0 0;
+}
 .second-row p {
   font-size: 22px;
+}
+section.warranty h2 {
+  font-size: 40px;
+}
+.second-card img {
+  margin: -90px 0 0 0;
+}
+.second-row h1 span {
+    font-size: 40px;
+    margin-top: -10px;
+}
+.warranty_card {
+  padding: 30px;
+}
+.warranty_card_content h3 {
+  font-size: 40px;
+}
+.warranty_card_content p {
+  font-size: 20px;
+}
+.warranty_card_content a {
+  font-size: 18px;
+}
+.warranty_card_img img {
+  margin: 30px 0px -50px 30px;
+}
+}
+@media screen and (max-width: 400px) {
+  .warranty_card_content a {
+    font-size: 16px;
+}
+.warranty_card_content h3 {
+  font-size: 35px;
 }
 }
